syntax = "proto3";

package net.devh.boot.grpc.example;
option java_package = "net.devh.boot.grpc.examples.lib";
option java_multiple_files = true;

message AuthRequest {
  string token = 1;
}

message AuthResponse {
  bool active = 1;
  optional string username = 2;
  optional string roles = 3;
  optional string message = 4;
}


service AuthService {
  rpc doIntrospect(AuthRequest) returns (AuthResponse);
}